feat: Implement Create Investor page and related functionality
- Added CreateInvestor component for adding new customers with KYC verification.
- Integrated form validation rules for input fields in CreateInvestor.
- Created Investors page to display a list of customers with KYC status and actions.
- Implemented ViewInvestor page to view detailed information about a specific investor.
- Updated routes to include new investor management features.
- Removed obsolete CreatePO and PurchaseOrders pages.
- Enhanced sidebar and topbar components to accommodate new navigation options.
- Updated API calls to handle new investor-related endpoints.
- Improved modal and notification handling for success and error messages.
- Refactored form rules for better reusability across components.

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,23 @@
-
-
+.custom-pagination .ant-pagination-item-active {
+  background-color: var(--color-primary) !important;
+  border-color: var(--color-primary) !important;
+}
+.custom-pagination .ant-pagination-item-active a {
+  color: #fff !important;
+  font-weight: 600;
+}
 .ant-upload.ant-upload-select {
-  width: 100%
-}.ant-menu-item:not(.ant-menu-item-selected),
+  width: 100%;
+}
+.ant-menu-item:not(.ant-menu-item-selected),
 .ant-menu-submenu-title {
-  color: var(--color-background) !important;
+  color: #ffffff80 !important;
 }
 
 .ant-menu .ant-menu-item-selected {
   background-color: var(--color-sidebar-background) !important;
   font-weight: 800 !important;
+  color: var(--color-text-light-primary);
 }
 
 .ant-menu-item-divider {
@@ -26,7 +34,7 @@
 }
 
 .ant-form-item {
-  margin-bottom: 0 !important;
+  margin-bottom: 10px !important;
 }
 
 .light-scroll .ant-table-body {
@@ -59,5 +67,14 @@
 }
 
 .ant-upload.ant-upload-select {
-  width: 100%
+  width: 100%;
+}
+
+.custom-pagination .ant-pagination-item-active {
+  background-color: var(--color-light-primary) !important;
+  border-color: var(--color-light-primary) !important;
+}
+.custom-pagination .ant-pagination-item-active a {
+  color: #fff !important;
+  font-weight: 600;
 }
