feat: Enhance form and layout components for improved user experience
- Added new color variable for light danger in CSS.
- Updated CustomBadge to accept additional className prop for styling.
- Enhanced CustomButton to support new "danger" and "secondary-danger" variants.
- Improved Field component to handle AWS URLs and local files more effectively.
- Integrated form instance handling in Field for better validation and error management.
- Updated FormBuilder to support new upload properties and form instance.
- Refactored AppLayout to include a context for managing title and subtitle.
- Enhanced Topbar to utilize context for dynamic title and back navigation.
- Updated modal styles for better customization.
- Refactored API calls in investor and lead pages to align with new data structure.

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   --color-light-primary: #00a63e;
   --color-secondary: #1e1e1e;
   --color-danger: #ff4757;
+  --color-light-danger: #d843431a;
   --color-warning: #e58b2b;
 
   --color-background: #f0f7f6;
@@ -31,6 +32,7 @@
   --color-light-primary: #00a63e;
   --color-secondary: #1e1e1e;
   --color-danger: #ff4757;
+  --color-light-danger: #d843431a;
   --color-warning: #e58b2b;
 
   --color-background: #f0f7f6;
