--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,16 @@
   color: #fff !important;
   font-weight: 600;
 }
+
+.ant-menu {
+  scrollbar-width: thin;
+}
+
+.ant-menu::-webkit-scrollbar {
+  width: 6px;
+}
+
+.ant-menu::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+}
